formateando el codigo y modificando estilos

--- a/index.html
+++ b/index.html
@@ -1,28 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-
-    
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <div class="center_content">
-        <h1 class="title">░▒▓ ｖ  ａ  ｐ  ｏ  ｒ  ｗ  ａ  ｖ  ｅ ▓▒░</h1>
-        
-        <div class="container">
-            <textarea id="input" cols="30" placeholder="Ingrese el texto" rows="10" autofocus></textarea>
-            <textarea id="output" cols="30" placeholder="ｔ ｅ ｘ ｔ ｏ   ｖ ａ ｐ ｏ ｒ ｗ ａ ｖ ｅ" rows="10" readonly></textarea>
-        </div>
+      <h1 class="title">░▒▓ ｖ ａ ｐ ｏ ｒ ｗ ａ ｖ ｅ ▓▒░</h1>
 
-        <button id="copy_btn" class="btn">
-            <small>c o p y</small>
-        </button>
+      <div class="container">
+        <textarea
+          id="input"
+          cols="30"
+          placeholder="Ingrese el texto"
+          rows="10"
+          autofocus
+        ></textarea>
+        <textarea
+          id="output"
+          cols="30"
+          placeholder="ｔ ｅ ｘ ｔ ｏ   ｖ ａ ｐ ｏ ｒ ｗ ａ ｖ ｅ"
+          rows="10"
+          readonly
+        ></textarea>
+      </div>
+
+      <button id="copy_btn" class="btn">
+        <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="15" height="15"><path d="M11 1.5h2.5v12a1 1 0 01-1 1h-10a1 1 0 01-1-1v-12H4m.5-1h6v2a1 1 0 01-1 1h-4a1 1 0 01-1-1v-2z" stroke="currentColor"></path></svg>
+        <small>c o p y &nbsp; t o &nbsp; c l i p b o a r d</small>
+      </button>
     </div>
 
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
